build: migrate tests to cmake build system
- 创建 tests/CMakeLists.txt 替代 Makefile
- 测试程序输出到 build/tests 目录
- 支持构建: sip_fake, lws_trans_test, caller, callee
- 所有中间文件在 build 目录中
- 主CMakeLists.txt添加 tests 子目录

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,11 @@ target_link_libraries(lwsip_static
 add_subdirectory(cmd)
 
 # ============================================================
+# Tests
+# ============================================================
+add_subdirectory(tests)
+
+# ============================================================
 # Installation
 # ============================================================
 install(TARGETS lwsip_static DESTINATION lib)
